# rewriteforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: e2e.sh
services/rewriteforge-api/: pyproject.toml
services/rewriteforge-api/src/rewriteforge/: __init__.py  bootstrap.py  container.py
services/rewriteforge-api/src/rewriteforge/app/: __init__.py
services/rewriteforge-api/src/rewriteforge/app/exceptions/: __init__.py  handlers.py
services/rewriteforge-api/src/rewriteforge/app/http/controllers/: rewrite_controller.py
services/rewriteforge-api/src/rewriteforge/app/http/requests/: __init__.py  rewrite_request.py
services/rewriteforge-api/src/rewriteforge/app/services/: __init__.py  rewrite_service.py
services/rewriteforge-api/src/rewriteforge/config/: __init__.py  settings.py
services/rewriteforge-api/src/rewriteforge/routes/: __init__.py  api.py
tests/services/rewriteforge/: __init__.py  test_integration.py  test_rewrite_service.py
