[project]
name = "rewriteforge-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rewriteforge-api"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[tool.uv.sources]
rewriteforge-api = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
