[project]
name = "rewriteforge-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "dependency-injector>=4.41.0",
    "llm-adapters",
    "cache-adapters",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[tool.uv.sources]
llm-adapters = { workspace = true }
cache-adapters = { workspace = true }